fix: (CXSPA-8015) improve tab focus visibility (show all four sides of focused ring)

--- a/projects/storefrontstyles/scss/components/content/tab/_tab.scss
+++ b/projects/storefrontstyles/scss/components/content/tab/_tab.scss
@@ -42,7 +42,12 @@
     &:focus {
       z-index: 1;
     }
-
+    @include forFeature('a11yCroppedFocusRing') {
+      &:focus-visible {
+        outline-offset: -3px;
+      }  
+    }
+    
     &.active:after,
     &:hover:not([disabled]):after {
       width: 100%;
@@ -83,6 +88,11 @@
     border-radius: var(--cx-tab-panel-border-radius);
     padding: var(--cx-tab-panel-padding);
     background: var(--cx-tab-panel-bg);
+    @include forFeature('a11yCroppedFocusRing') {
+      &.active:focus-visible {
+        outline-offset: -3px;
+      }
+    }
   }
 
   .tab {
